--- a/config.properties
+++ b/config.properties
@@ -2,7 +2,7 @@
 ParserClass = pt.up.fe.comp.SimpleParser
 
 # The fully qualified name of your class that implements the interface JmmAnalysis
-AnalysisClass = pt.up.fe.comp.jmm.analysis.JmmAnalyser
+AnalysisClass = pt.up.fe.comp.analysis.JmmAnalyser
 
 # The fully qualified name of your class that implements the interface JmmOptimization
 OptimizationClass = 
